# Market-Research-AI-Agent-Using-CrewAI

./: README.md  market_research_report.md  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
src/market_research/: app.py  crew.py  main.py
src/market_research/config/: agents.yaml  tasks.yaml
